--- a/XdHtml/index.html
+++ b/XdHtml/index.html
@@ -1,5 +1,5 @@
 <HTML><HEAD><META HTTP-EQUIV="Content-Type" content="text/html; charset=gb_2312-80">
-<TITLE>Document Title</TITLE><script type="text/javascript" src="blclass.js"></script></HEAD><BODY>
+<TITLE>index.html</TITLE><script type="text/javascript" src="blclass.js"></script></HEAD><BODY>
 
 <div id="blPageNav">
 <a href="../index.html">[..]</a>
