--- a/XdHtml/jsgraphics.html
+++ b/XdHtml/jsgraphics.html
@@ -3,13 +3,13 @@
 <!-- saved from url=(0053)http://www.walterzorn.com/jsgraphics/jsgraphics_e.htm -->
 <HTML>
 <HEAD>
-<TITLE>Xd Follow</TITLE>
+<TITLE>jsgraphics.html</TITLE>
 <META http-equiv=expires content=0>
 <META http-equiv=content-type content="text/html; charset=iso-8859-1">
 <SCRIPT src="jsgraphics.js" type=text/javascript></SCRIPT>
 </HEAD>
 <BODY bgColor=FloralWhite > 
-<div id="blPageV">v0.0.23</div>
+<div id="blPageV">v0.0.24</div>
 <div id="xddbg"></div>
 <div id="idMedia"></div> 
 <script type="text/javascript" src="blclass.js"></script>
