--- a/XdHtml/vc6ui.html
+++ b/XdHtml/vc6ui.html
@@ -1,4 +1,4 @@
-<HTML><HEAD><TITLE>noName</TITLE> 
+<HTML><HEAD><TITLE>vc6ui.html</TITLE> 
 <script src="blclass.js"  type="text/javascript" ></script>
 <SCRIPT src="jsgraphics.js" type=text/javascript></SCRIPT>
 </HEAD>
