--- a/XdHtml/song.html
+++ b/XdHtml/song.html
@@ -8,7 +8,7 @@
 function _blSongClass()
 {
 	var className	= "_blSongClass";
-	var classV		= "v0.0.45";
+	var classV		= "v0.0.46";
 	var	_sv			= null; 
 	var	_stxt		= null; 
 	var _sjg		= null;
@@ -331,7 +331,7 @@ function _blSongClass()
 						_stxt.value = t.value;
 					}
 					else{
-						blo0.blScript("id_script_song_sample1","file:///C:/Users/13699/xd/js/songs/1.js" ); 
+						blo0.blScript("id_script_song_sample1","https://littleflute.github.io/xd/js/songs/1.js" ); 
 					}
 				}
 				var sample2	= blo0.blBtn(v,v.id+"sample2","sample2","gold"); 
@@ -341,7 +341,7 @@ function _blSongClass()
 						_stxt.value = t.value;
 					}
 					else{
-						blo0.blScript("id_script_song_sample2","file:///C:/Users/13699/xd/js/songs/2.js" ); 
+						blo0.blScript("id_script_song_sample2","https://littleflute.github.io/xd/js/songs/5.js" ); 
 					}
 				}
 				var sample3	= blo0.blBtn(v,v.id+"sample3","sample3","gold"); 
