--- a/XdHtml/2.html
+++ b/XdHtml/2.html
@@ -7,9 +7,9 @@
 </style>
 
 </HEAD>
-<BODY> 
+<BODY> <div id="pageLevel" style="display:none">0</div>
 <script src="blclass.js"></script>
-<div id="Nav">v0.0.48<br>
+<div id="Nav">v0.0.49<br>
 <div id="xddbg"></div>
 <div id="idMedia"></div> 
 <script type="text/javascript" src="xd.js"></script> 
