--- a/XdHtml/song.html
+++ b/XdHtml/song.html
@@ -1,7 +1,9 @@
 <HTML><HEAD><TITLE>song.html</TITLE> 
 <script src="blclass.js"  type="text/javascript" ></script>
 <SCRIPT src="jsgraphics.js" type=text/javascript></SCRIPT>
-</HEAD><BODY><div id = "idDivBlV" style="display:none;">v0.0.5</div>
+</HEAD><BODY>
+<div id="pageLevel" style="display:none">0</div>
+<div id = "idDivBlV" style="display:none;">v0.0.6</div>
 <div id="blPageV"></div><div id="xddbg"></div>
 <script type="text/javascript" src="xd.js"></script> 
 <script>
