--- a/XdHtml/vc6ui.html
+++ b/XdHtml/vc6ui.html
@@ -3,6 +3,7 @@
 <SCRIPT src="jsgraphics.js" type=text/javascript></SCRIPT>
 </HEAD>
 <BODY>
+<div id="pageLevel" style="display:none">0</div>
 <div id="blPageV"></div>
 <div id="xddbg"></div>
 <div id="idMedia"></div> 
@@ -40,7 +41,7 @@ function add(a,b)
 	return r;
 }
 function _blClass1(){
-	this.classV		= "v0.0.43";//xd_2d
+	this.classV		= "v0.0.44";//xd_2d
 	this.className	= "_blClass1";  
 	this.blrTest1	= function(b,d){
 		alert(add(1,2));
