--- a/XdHtml/kLines.html
+++ b/XdHtml/kLines.html
@@ -7,6 +7,7 @@
 <SCRIPT src="jsgraphics.js" type=text/javascript></SCRIPT>
 </HEAD>
 <BODY>
+<div id="pageLevel" style="display:none">0</div>
 <div id="blPageV"></div>
 <div id="xddbg"></div>
 <div id="idMedia"></div> 
@@ -14,7 +15,7 @@
  
 <script>   
 function _blKinesClass(){
-	this.classV		= "v0.0.73";//xd_2do
+	this.classV		= "v0.0.74";//xd_2do
 	this.className	= "_blKinesClass";
 	this.blrYear	= function(b,d){ 
 		_LoadData("id_years",430,10,800,400); 
