--- a/XdHtml/lyric.html
+++ b/XdHtml/lyric.html
@@ -5,7 +5,8 @@
 <TITLE>lyric.html</TITLE>
 <script type="text/javascript" src="blclass.js"></script>
 </HEAD><BODY>
-<div id = "idDivBlV" style="display:none;">v0.0.62</div>
+<div id="pageLevel" style="display:none">0</div>
+<div id = "idDivBlV" style="display:none;">v0.0.63</div>
 <div id="xddbg"></div><div id="idMedia"></div> 
 <script src="xd.js" type="text/javascript" ></script>
 <div id="Nav"> 
