--- a/XdHtml/cchess/xqbase/getFromXQBASE.html
+++ b/XdHtml/cchess/xqbase/getFromXQBASE.html
@@ -2,7 +2,7 @@
 <script src="../../blclass.js"  type="text/javascript" ></script> 
 </HEAD><BODY>
 <div id="pageLevel" style="display:none">2</div>
-<div id = "idDivBlV" style="display:none;">v0.1.34</div>
+<div id = "idDivBlV" style="display:none;">v0.1.21</div>
 <div id="blPageV"></div><div id="xddbg"></div>
 <script type="text/javascript" src="../../xd.js"></script> 
 <script>
@@ -77,8 +77,8 @@ var btn3_Next = blo0.blBtn(toolBar,"btn3_Next",pageIdx,"gray");
 var v = blo0.blDiv(document.body,"id_v","v","yellowgreen");
 _createMyNav(v);
 var l = blo0.blLink(v,"id_l","save","?xd=save","red"); l.style.display = "none";
-var baseNav = blo0.blDiv(v,"baseNav","baseNav","gray");
-_createBaseNav(baseNav); 
+var divMsg = blo0.blDiv(v,"divMsg","divMsg","gray");
+var divChess = blo0.blDiv(v,"divChess","divChess","skyblue");
 btn1_Ajx.onclick = function(){
 	var ajxHref = href + pageIdx;
 	blo0.blAjx(w,ajxHref);
@@ -96,31 +96,6 @@ btn3_Next.onclick = function(){
  function _createMyNav(d){
 	var url = "index.html";
 	var index = blo0.blLink(d,d.id+"index","index",url,"lightblue");  
-
-	var url = "getFromXQBASE.html";
-	var getFromXQBASE = blo0.blLink(d,d.id+"getFromXQBASE","getFromXQBASE",url,"red");  
-}
-
- function _createBaseNav(d){
-	var jMax = 1000;
-	var iMax = 10;
-	for( var j = 1; j<=jMax;j++)
-	{
-		var idLine = "id_nave_line_" + j;	
-		var txtLine	= "line:" + j;	
-		var dn = blo0.blDiv(d,idLine,txtLine,"brown");
-
-		for (var i = 1;i<=iMax;i++)
-		{
-			var color	= i%2==0?"yellowgreen":"skyblue";
-			var	f		= (j-1) * iMax + i;
-			var url		= "./" + f + ".html";
-			var txt		= "gameid:" + f;
-			var id		= idLine + "id_link_game_" + i;
-			var l = blo0.blLink(dn,id,txt,url,color);    
-		}
-	}
- 
 }
 </script> 
 </BODY>
