--- a/XdHtml/1.html
+++ b/XdHtml/1.html
@@ -1,96 +1,103 @@
 <HTML><HEAD><TITLE>1.html</TITLE> 
 <script src="blclass.js"  type="text/javascript" ></script>
 <SCRIPT src="jsgraphics.js" type=text/javascript></SCRIPT>
-</HEAD><BODY><div id="pageLevel" style="display:none">0</div>
-<div id = "idDivBlV" style="display:none;">v0.1.8</div>
+</HEAD><BODY  style="background-color:black">
+<div id="pageLevel" style="display:none">0</div>
+<div id = "idDivBlV" style="display:none;">v0.1.11</div>
 <div id="blPageV"></div><div id="xddbg"></div>
 <script type="text/javascript" src="xd.js"></script> 
 <script>
-function get_file_name(a,b){
-	var r = "";
-	var p = "C:\\Users\\13699\\xd1\\baidu\\VC6_EN\\VC6_EN\\VC6EN\\MyProjects\\XdHtml\\cchess\\";
-	r = p + pageIdx + ".html";
-	return r;
-}
+ //  blo0.blLink(nav,"../../../../../../../xd/js/plx/xdPlxSong.js","cchess.html",url,"skyblue"); l.push(cchess);
+ 
+var _color	= ["red","tomato","gold","black","green","blue","lightblue","yellow","brown","pink","gray","white","mediumpurple",
+	"cyan"];
+var _grey	= ["Gainsboro","LightGray","Silver","DarkGray",
+			   "DimGray","Gray","LightSlateGray","SlateGray","DarkSlateGray","black"];
 
-function create_page(titleTxt,bodyHTML){
-	var r = "";
-	r = blo0.blCreatePage("xdtest1",divChess.innerHTML);
-	return r;
-}
+function _NoteClass(oBoss,noteNum) { 
+	var v			= "v0.0.1"; 
+	this.n			= noteNum; 
+ 
+ 	this.handle	= blo0.blBtn(oBoss,oBoss.id + "_note_handle" + this.n, "note: " + this.n,_grey[3]); 
+}//_NoteClass
 
-function show_msg(msgTxt1,msgTxt2){  
-	divMsg.innerHTML = msgTxt1;  
-	btn3_Next.click();
-}
+function _BarClass(oBoss,barNum) { 
+	var v			= "v0.0.1";
+	var _note		= [];
+	var _btnAddNote	= null; 
+	this.n			= barNum; 
 
+	var _barToolBar	= blo0.blDiv(oBoss,oBoss.id + "_barToolBar" + this.n,"",_grey[2]); 
+ 	this.handle		= blo0.blBtn(_barToolBar,_barToolBar.id + "handle" + this.n, "bar: " + this.n,_grey[7]); 
+	var _NotesV		= blo0.blDiv(oBoss,oBoss.id + "_NotesV" + this.n,"_Notes: ",_grey[2]); 
+ 	var	btnAddNote	= blo0.blBtn(_barToolBar,_barToolBar.id + "_Add_Note" + this.n, "+",_grey[5]); 
+	btnAddNote.onclick = function(oBoss_){ var n = 0;
+			return function(){n++;_note.push(new _NoteClass(oBoss_,n));}
+		}(_NotesV);
+}//_BarClass
 
-function _ajaxWorkClass()
-{
-	var _getGameId = function(oBoss,txt){
-		var r = "";
-		var a = txt.split("gameid%3D");
-		var b = a[1].split("&am");
-		var r = b[0];
-		var d = blo0.blDiv(oBoss,oBoss.id+"_getGameId","_getGameId","gray");
-		d.innerHTML = r;
+function _lineClass(oBoss,lineNum) { 
+	var v			= "v0.0.1";
+	var _bar		= [];
+	var _btnAddBar	= null; 
+
+	this.n			= lineNum;
+	this.mainView	= blo0.blDiv(oBoss,oBoss.id + "_line_mainView" + this.n, "line: " + this.n,_color[4]);
+	this.toolBar	= blo0.blDiv(this.mainView,this.mainView.id + "_tb","line_toolBar",_color[8]);
+	var _barsV		= blo0.blDiv(this.mainView,this.mainView.id + "_barsV","_barsV",_grey[0]);
+	_barsV.style.display = "block";
+ 
+	_btnAddBar = blo0.blBtn( this.toolBar, this.toolBar.id + "_btnAddBar", "+" , _grey[0]);	
+	_btnAddBar.onclick = function(oBoss_){ var n = 0;
+			return function(){n++;_bar.push(new _BarClass(oBoss_,n));}
+		}(_barsV);
+
+	var btnBarsOnOff = blo0.blBtn( this.toolBar, this.toolBar.id + "btnBarsOnOff", "OnOff" , _color[1]);	
+	btnBarsOnOff.onclick = function(b,d){ var n = 0;
+			return function(){n++; _on_off_div(b,d);}
+		}(btnBarsOnOff,_barsV);
+ 
+}//_lineClass
+
+function _myClass() { 
+	var _mainDiv	= blo0.blDiv(document.body,"id_div_main","mainDiv","gray");
+	var _linesV		= blo0.blDiv(document.body,"id_div_linesV","_linesV",_color[6]); _linesV.style.display = "block"; 
+	var _l			= [];
+	var _btnAddLine	= null;
+	
+	var _create_toolBar	= function(oBoss){
+		var tb1 = blo0.blDiv( oBoss ,oBoss.id + "_div_tb1", "Page: toolbar1  -" , _color[12]);	
+		for(var i = 0;i<_color.length;i++){
+			var b = blo0.blBtn( tb1, tb1.id + "btn" + i, i , _color[i]);		
+		}
+		var tb2 = blo0.blDiv( oBoss ,oBoss.id + "_div_tb2", "Page: toolbar2  -" , _grey[5]);	
+		for(var i = 0;i<_grey.length;i++){
+			var b = blo0.blBtn( tb2, tb2.id + "btn" + i, i , _grey[i]);		
+		}
+		_btnAddLine = blo0.blBtn( tb2, tb2.id + "_btnAddLine", "+" , _color[1]);	
+		_btnAddLine.onclick = function(){ var n = 0;
+			return function(){n++;_l.push(new _lineClass(_linesV,n));}
+		}();
+		var btnLinesOnOff = blo0.blBtn( tb2, tb2.id + "btnLinesOnOff", "OnOff" , _color[1]);	
+		btnLinesOnOff.onclick = function(b,d){ var n = 0;
+			return function(){n++; _on_off_div(b,d);}
+		}(btnLinesOnOff,_linesV);
+ 
 	};
-	var _getChinesPu = function(oBoss,txt){
-		var r = "";
-		var a = txt.split("<pre>");
-		var b = a[1].split("</pre>");
-		var r = b[0];
-		var d = blo0.blDiv(oBoss,oBoss.id+"_getChinesPu","d1","skyblue");
-		d.innerHTML = r;
+	var _createMyUI 	= function(this_ ){  
+			_tb		= _create_toolBar (_mainDiv);  
 	};
-	var _getBoard = function(oBoss,txt){
-		var r = "";
-		var a = txt.split('<td background="/images/headerbg.gif">');
-		var b = a[1].split("<br><br>");
-		var t1 = "/pub/flashxq.swf";
-		var t2 = "http://www.xqbase.com/pub/flashxq.swf";
-		var t3 = "https://littleflute.github.io/cchess/ref/http/www.xqbase.com/pub/flashxq.swf";
-		var r = b[0].replace(t1,t3); 
+	this.run = function(){
+		_createMyUI(this);
+	};
 
-		var d = blo0.blDiv(oBoss,oBoss.id+"_getBoard","d1","lightblue");
-		d.innerHTML = r;
-	};
-	var _myJob = function(txt){
-		_getGameId(divChess,txt);
-		_getBoard(divChess,txt);
-		_getChinesPu(divChess,txt);
-	};
-	this._2do = function(txt)
-	{
-		_myJob(txt);
-		btn2_Save.click();
-	}
-}
-var pageIdx = 10000;
-var w = new _ajaxWorkClass;
-var href = "http://www.xqbase.com/xqbase/?gameid=";
-var toolBar = blo0.blDiv(document.body,"id_toolBar","toolBar","BlueViolet");
-var btn1_Ajx = blo0.blBtn(toolBar,"btn1_Ajx","btn1_Ajx","gold");
-var btn2_Save = blo0.blBtn(toolBar,"btn2_Save","btn2_Save","skyblue");
-var btn3_Next = blo0.blBtn(toolBar,"btn3_Next",pageIdx,"gray");
-var v = blo0.blDiv(document.body,"id_v","v","yellowgreen");
-var l = blo0.blLink(v,"id_l","save","?xd=save","red"); l.style.display = "none";
-var divMsg = blo0.blDiv(v,"divMsg","divMsg","gray");
-var divChess = blo0.blDiv(v,"divChess","divChess","skyblue");
-btn1_Ajx.onclick = function(){
-	var ajxHref = href + pageIdx;
-	blo0.blAjx(w,ajxHref);
-}
-btn2_Save.onclick = function(){
-	l.click();
-}
+}//_myClass 
+function _run() { 
+	var c = new _myClass;
+	c.run(c); 
+};  
+_run();
 
-btn3_Next.onclick = function(){
-    if(pageIdx>12141) return;
-	pageIdx++;
-	btn3_Next.innerHTML = pageIdx;
-	btn1_Ajx.click();
-}
 </script> 
 </BODY>
 </HTML>
